Update default-max-page-width to match v2 and set max-width of footer

--- a/src/desktop/components/main_layout/footer/index.styl
+++ b/src/desktop/components/main_layout/footer/index.styl
@@ -9,6 +9,8 @@ mlf-upper-column-width = ((100% - mlf-upper-column-aside-width) / 4)
   background-color getColor('white100')
   clearfix()
 .mlf
+  max-width default-max-page-width
+  margin auto
   .mlf-upper
     margin-bottom getSpace(1)
 
