Added in h1 tag in jade file for SEO

--- a/src/desktop/apps/articles/templates/articles.jade
+++ b/src/desktop/apps/articles/templates/articles.jade
@@ -9,4 +9,6 @@ append locals
   - bodyClass = bodyClass + ' body-articles'
 
 block body
+  h1(style={visibility:"hidden"})
+    | Editorial | Artsy
   include full_feed
