Add comments describing what files need to change when updating the navbar

--- a/src/desktop/apps/articles/stylesheets/articles.styl
+++ b/src/desktop/apps/articles/stylesheets/articles.styl
@@ -4,6 +4,8 @@ gutter-unit = 15px
 
 body.body-articles
   #main-layout-container
+    // Change this margin to adjust content height relative to NavBar
+    // https://github.com/artsy/force/pull/6991
     margin 94px 0px 0px 0px
     max-width 100%
 
