--- a/src/desktop/apps/fair_organizer/stylesheets/index.styl
+++ b/src/desktop/apps/fair_organizer/stylesheets/index.styl
@@ -10,6 +10,8 @@ browse-container-height = 442px
 
 .fair-organizer-feature-image
   position absolute
+  // Change this top position to adjust content height relative to NavBar
+  // https://github.com/artsy/force/pull/6991
   top 44px
   left 0px
   width 100%
