--- a/src/desktop/components/stylus_lib/index.styl
+++ b/src/desktop/components/stylus_lib/index.styl
@@ -19,6 +19,8 @@ gutter = 30px
 header-logo-icon-size = 40px
 home-logo-size = 60px
 layout-side-margin = 55px
+// Change this height to adjust the height of the NavBar
+// https://github.com/artsy/force/pull/6991
 main-header-height = 103px
 nav-bar-break = 768px
 welcome-header-height = 85px
