feature: Enable Artwork + Order NOVO Routes
This change converts the `artwork` and `orders` routes to the novo
template.

--- a/src/desktop/components/main_layout/templates/artsy_v2.jade
+++ b/src/desktop/components/main_layout/templates/artsy_v2.jade
@@ -28,6 +28,7 @@ block prepend scripts
   != scripts
 
 block append scripts
+  // TODO: Remove this file post NOVO conversion
   script( src=asset("/assets/artsy-v2.js") )
 
 
