--- a/src/desktop/components/view_in_room/index.jade
+++ b/src/desktop/components/view_in_room/index.jade
@@ -3,10 +3,10 @@
 img.view-in-room__artwork( class='js-view-in-room-artwork' )
 
 a.view-in-room__close( class='js-view-in-room-close' )
-  i.icon-close
+  | &times;
 
 .view-in-room__measurement-flex-container
-  .view-in-room__measurement( class='js-view-in-room-measurement' ) 
+  .view-in-room__measurement( class='js-view-in-room-measurement' )
     .view-in-room__measurement-feet 8 ft.
-    .view-in-room__measurement-bar( class='js-view-in-room-measurement-bar' ) 
+    .view-in-room__measurement-bar( class='js-view-in-room-measurement-bar' )
       .view-in-room__measurement-line
