--- a/src/desktop/components/view_in_room/index.jade
+++ b/src/desktop/components/view_in_room/index.jade
@@ -3,7 +3,7 @@
 img.view-in-room__artwork( class='js-view-in-room-artwork' )
 
 a.view-in-room__close( class='js-view-in-room-close' )
-  | &times;
+  i.icon-close
 
 .view-in-room__measurement-flex-container
   .view-in-room__measurement( class='js-view-in-room-measurement' )
