--- a/src/desktop/apps/auction/components/layout/meta.jade
+++ b/src/desktop/apps/auction/components/layout/meta.jade
@@ -7,7 +7,7 @@ meta( name='description', content= description )
 meta( property='og:description', content= description )
 meta( property='twitter:description', content= description )
 meta( property='og:url', content='#{sd.APP_URL}#{app.auction.href()}' )
-link( rel='canonical', href='#{sd.APP_URL}#{app.auction.href()}' )
+link( rel='canonical', href='#{sd.APP_URL}/auction/#{app.auction.id}' )
 
 meta( property='og:type', content='website' )
 meta( property='og:event', content='auction' )
