--- a/src/mobile/components/layout/templates/scaffold.jade
+++ b/src/mobile/components/layout/templates/scaffold.jade
@@ -79,5 +79,26 @@ html( class=htmlClass )
             };
           })();
 
+      if !sd.THIRD_PARTIES_DISABLED && sd.SIFT_BEACON_KEY
+        script( type="text/javascript" ).
+          var _sift = window._sift = window._sift || [];
+          _sift.push(['_setAccount', '#{sd.SIFT_BEACON_KEY}']);
+          _sift.push(['_setUserId', '#{sd.CURRENT_USER ? sd.CURRENT_USER.id : ''}']);
+          _sift.push(['_setSessionId', '#{sd.SESSION_ID}']);
+          _sift.push(['_trackPageview']);
+
+          (function() {
+            function ls() {
+              var e = document.createElement('script');
+              e.src = 'https://cdn.sift.com/s.js';
+              document.body.appendChild(e);
+            }
+            if (window.attachEvent) {
+              window.attachEvent('onload', ls);
+            } else {
+              window.addEventListener('load', ls, false);
+            }
+          })();
+
       //- Include any scripts into the scripts block
       block scripts
