--- a/src/desktop/apps/about/templates/sections/education.jade
+++ b/src/desktop/apps/about/templates/sections/education.jade
@@ -7,18 +7,18 @@
 //- "Images for learning..."
 .about-container
   .span2: +pull-blurb(section.pullBlurb1)
-  .span4: img( data-src= section.pullBlurb1.src )
+  .span4: img( src= section.pullBlurb1.src )
 
 //- "Educational content"
 .about-container
   .span2: for image in firstHalf(section.pullBlurb2.images)
     a.about-image-container( href= image.href )
-      img( data-src= image.src )
+      img( src= image.src )
       .about-avant-garde-caption= image.author
       p!= image.caption
   .span2: for image in secondHalf(section.pullBlurb2.images)
     a.about-image-container( href= image.href )
-      img( data-src= image.src )
+      img( src= image.src )
       .about-avant-garde-caption= image.author
       p!= image.caption
   .span2: +pull-blurb(section.pullBlurb2)
@@ -26,7 +26,7 @@
 //- "Artist Biographies"
 #about-section4-pull-blurb-3-container.about-container
   - artwork = section.pullBlurb3.artwork
-  a.span4( href=artwork.href ): img( data-src=artwork.src )
+  a.span4( href=artwork.href ): img( src=artwork.src )
   .span2
     +pull-blurb(section.pullBlurb3)
     #about-section4-pull-blurb-3-details
@@ -38,7 +38,7 @@
   .span3
     for image in section.pullBlurb4.leftImages
       .about-image-container
-        img( data-src= image.src )
+        img( src= image.src )
         .about-garamond-caption= image.caption
     a.avant-garde-button-white(
       href= section.pullBlurb4.button.href
@@ -48,6 +48,6 @@
     hr.is-invisible
     .span2: for image in section.pullBlurb4.rightImages
       a.about-image-container( href=image.href )
-        image( data-src= image.src )
+        image( src= image.src )
         .about-avant-garde-caption= image.author
         p= image.caption
