--- a/src/desktop/apps/about/templates/sections/the_art_world_online.jade
+++ b/src/desktop/apps/about/templates/sections/the_art_world_online.jade
@@ -10,7 +10,7 @@
     +pull-blurb(section.pullBlurb1)
     for image in secondHalf(section.pullBlurb1.images)
       a.about-image-container.is-pin-right( href= image.href )
-        img( data-src= image.src )
+        img( src= image.src )
         .about-avant-garde-caption
           = image.caption.split(' - ')[0]
           em= image.caption.split(' - ')[1]
@@ -31,7 +31,7 @@
   #about-section1-images1-right.span3
     for image in firstHalf(section.pullBlurb1.images)
       a.about-image-container( href= image.href )
-        img( data-src= image.src )
+        img( src= image.src )
         .about-avant-garde-caption
           = image.caption.split(' - ')[0]
           em= image.caption.split(' - ')[1]
