feature: Galleries Mobile Header
The galleries mobile header was nearly 2 MiB, now it's under 100 Kib.

--- a/src/mobile/apps/galleries_institutions/templates/index.jade
+++ b/src/mobile/apps/galleries_institutions/templates/index.jade
@@ -5,7 +5,7 @@ block content
     if featuredPartner
       a.galleries-institutions-featured-partner(
         href= featuredPartner.href()
-        style="background-image: url(#{featuredPartner.coverImage().imageUrl('wide')})"
+        style="background-image: url(#{featuredPartner.coverImage().optimizedImageUrl('wide')})"
       )
 
     h1.galleries-institutions-header.avant-garde-header-center
