Replace fancy iphone image with static one

--- a/src/desktop/apps/about/templates/sections/the_art_world_online.jade
+++ b/src/desktop/apps/about/templates/sections/the_art_world_online.jade
@@ -42,7 +42,4 @@
   .span2
     +pull-blurb(section.pullBlurb4)
   .span2
-    .about-section1-phone-container
-      .about-section1-phone-plate
-      .about-section1-phone-img-wrapper
-        .about-section1-phone-bg
+    img( src= "https://artsy-media-uploads.s3.amazonaws.com/PiE_1gCyYvs3IKWiWjHo3g%2FFrame+14.png" )
