--- a/src/desktop/apps/about/stylesheets/index.styl
+++ b/src/desktop/apps/about/stylesheets/index.styl
@@ -14,6 +14,8 @@ header-margin = 180px
     margin-top (header-margin / 1.5)
   &:last-child
     margin-bottom (header-margin / 1.5)
+    > div:last-child
+      width calc(100% \- 400px)
 .about-container
   width container-width
   margin header-margin auto
