--- a/src/desktop/apps/partner/templates/index.jade
+++ b/src/desktop/apps/partner/templates/index.jade
@@ -9,7 +9,7 @@ append locals
 block body
   #partner.responsive-layout-container
     .main-layout-container
-      include header
+      //- include header
       .partner-content
         .loading-spinner
   include ../../../components/main_layout/templates/json_ld
