--- a/src/desktop/apps/partner2/templates/index.jade
+++ b/src/desktop/apps/partner2/templates/index.jade
@@ -9,7 +9,7 @@ append locals
 block body
   #partner.responsive-layout-container
     .main-layout-container
-      include header
+      //- include header
       .partner2-content
         .loading-spinner
-    include footer
+    //- include footer
