Preserve querystrings when redirecting to /login or /signup paths

--- a/src/desktop/components/fair_layout/templates/user.jade
+++ b/src/desktop/components/fair_layout/templates/user.jade
@@ -23,5 +23,5 @@
           | Log out
 
   else
-    a.avant-garde-button-white.mlh-login( href='/log_in', rel='nofollow' ) Log in
-    a.avant-garde-button-black.mlh-signup( href='/sign_up', rel='nofollow' ) Sign up
+    a.avant-garde-button-white.mlh-login( href='/login', rel='nofollow' ) Log in
+    a.avant-garde-button-black.mlh-signup( href='/signup', rel='nofollow' ) Sign up
