--- a/src/desktop/components/main_layout/footer/mobile_footer_menu.jade
+++ b/src/desktop/components/main_layout/footer/mobile_footer_menu.jade
@@ -15,8 +15,8 @@
       a( href='/user/edit' ) Account
   else
     .mlf-login-signup
-      a.mlf-signup.avant-garde-button-dark( href='/sign_up', rel='nofollow' ) Sign up
-      a.mlf-login.avant-garde-button-dark( href='/log_in', rel='nofollow') Log in
+      a.mlf-signup.avant-garde-button-dark( href='/signup', rel='nofollow' ) Sign up
+      a.mlf-login.avant-garde-button-dark( href='/login', rel='nofollow') Log in
   .mlf-lower
       nav#main-layout-footer-internal
         span.mlf-links
