--- a/src/mobile/components/layout/templates/login-signup.jade
+++ b/src/mobile/components/layout/templates/login-signup.jade
@@ -1,6 +1,6 @@
 mixin login-signup(template)
   .login-signup
     .login-signup-button-container
-      a.avant-garde-box-button.avant-garde-box-button-gray( href="/sign_up?intent=signup&contextModule=#{template}&destination=#{sd.CURRENT_PATH}", data-test="mobileSignUpCTA", rel="nofollow" ) Sign up
+      a.avant-garde-box-button.avant-garde-box-button-gray( href="/signup?intent=signup&contextModule=#{template}&destination=#{sd.CURRENT_PATH}", data-test="mobileSignUpCTA", rel="nofollow" ) Sign up
     .login-signup-button-container
-      a.avant-garde-box-button.avant-garde-box-button-gray( href="/log_in?intent=login&contextModule=#{template}&destination=#{sd.CURRENT_PATH}", data-test="mobileLogInCTA", rel="nofollow" ) Log in
+      a.avant-garde-box-button.avant-garde-box-button-gray( href="/login?intent=login&contextModule=#{template}&destination=#{sd.CURRENT_PATH}", data-test="mobileLogInCTA", rel="nofollow" ) Log in
