--- a/src/desktop/components/fair_layout/templates/index.jade
+++ b/src/desktop/components/fair_layout/templates/index.jade
@@ -27,6 +27,6 @@ html( data-useragent=userAgent )
     include ../../main_layout/footer/template
     #scripts
       include ../../main_layout/templates/scripts
-      script( src=asset('/assets/fairs.js') )
+      script( src=asset('/assets/legacy-fairs.js') )
       if assetPackage
-        script( src=asset("/assets/#{assetPackage}.js") )
+        script( src=asset("/assets/legacy-#{assetPackage}.js") )
