--- a/src/desktop/components/main_layout/templates/blank.jade
+++ b/src/desktop/components/main_layout/templates/blank.jade
@@ -32,6 +32,6 @@ html( data-useragent= userAgent lang="en")
     #scripts
       block scripts
         include scripts
-        script( src= asset('/assets/main_layout.js') )
+        script( src= asset('/assets/legacy-main_layout.js') )
         if assetPackage
-          script( src= asset('/assets/#{assetPackage}.js') )
+          script( src= asset('/assets/legacy-#{assetPackage}.js') )
