--- a/src/desktop/components/main_layout/templates/index.jade
+++ b/src/desktop/components/main_layout/templates/index.jade
@@ -39,9 +39,9 @@ html(
     //- Javascripts
     #scripts
       include scripts
-      script( src= asset('/assets/main_layout.js') )
+      script( src= asset('/assets/legacy-main_layout.js') )
 
       if assetPackage
-        script( src=asset('/assets/#{assetPackage}.js') )
+        script( src=asset('/assets/legacy-#{assetPackage}.js') )
 
       block scripts
