--- a/src/desktop/components/main_layout/templates/minimal_header.jade
+++ b/src/desktop/components/main_layout/templates/minimal_header.jade
@@ -29,7 +29,7 @@ html( data-useragent= userAgent lang="en")
       block scripts
         include scripts
 
-        script( src= asset('/assets/main_layout.js') )
+        script( src= asset('/assets/legacy-main_layout.js') )
 
         if assetPackage
-          script( src=asset('/assets/#{assetPackage}.js') )
+          script( src=asset('/assets/legacy-#{assetPackage}.js') )
