--- a/src/desktop/components/main_layout/templates/redesign.jade
+++ b/src/desktop/components/main_layout/templates/redesign.jade
@@ -42,8 +42,8 @@ html(
       block scripts
 
         include scripts
-        script( src= asset('/assets/main_layout.js') )
+        script( src= asset('/assets/legacy-main_layout.js') )
 
         if assetPackage
-          script( src=asset('/assets/#{assetPackage}.js') )
+          script( src=asset('/assets/legacy-#{assetPackage}.js') )
 
