--- a/src/mobile/components/layout/templates/scaffold.jade
+++ b/src/mobile/components/layout/templates/scaffold.jade
@@ -14,14 +14,14 @@ html( class=htmlClass )
 
     #scripts
       //- Common bundle
-      script( src=asset("/assets/runtime.js") )
-      script( src=asset("/assets/common.js") )
-      script( src=asset("/assets/artsy-common.js") )
-      script( src=asset("/assets/common-backbone.js") )
-      script( src=asset("/assets/common-jquery.js") )
-      script( src=asset("/assets/common-react.js") )
-      script( src=asset("/assets/common-utility.js") )
-      script( src=asset("/assets/artsy.js") )
+      script( src=asset("/assets/legacy-runtime.js") )
+      script( src=asset("/assets/legacy-common.js") )
+      script( src=asset("/assets/legacy-artsy-common.js") )
+      script( src=asset("/assets/legacy-common-backbone.js") )
+      script( src=asset("/assets/legacy-common-jquery.js") )
+      script( src=asset("/assets/legacy-common-react.js") )
+      script( src=asset("/assets/legacy-common-utility.js") )
+      script( src=asset("/assets/legacy-artsy.js") )
 
       //- Segment.io
       if !sd.THIRD_PARTIES_DISABLED
@@ -40,10 +40,10 @@ html( class=htmlClass )
         != sharify.script()
 
       //- Include asset package's javascript
-      script( src=asset('/assets/' + assetPackage + '.js') )
+      script( src=asset('/assets/legacy-' + assetPackage + '.js') )
 
       if !sd.THIRD_PARTIES_DISABLED
-        script( src=asset('/assets/mobile_analytics.js'))
+        script( src=asset('/assets/legacy-mobile_analytics.js'))
 
       //- Stripe
       if !sd.THIRD_PARTIES_DISABLED
