--- a/src/desktop/apps/user/components/linked_accounts/index.jade
+++ b/src/desktop/apps/user/components/linked_accounts/index.jade
@@ -5,7 +5,12 @@ include ./mixin
   if sd.ERROR
     != sd.ERROR
 
-for service in ['Facebook', 'Apple']
+if sd.ENABLE_SIGN_IN_WITH_APPLE
+  - services = ['Facebook', 'Apple']
+else
+  - services = ['Facebook']
+
+for service in services
   .settings-linked-accounts__service.settings-split
     .settings-split__left
       .settings-linked-accounts__service__name
