--- a/src/mobile/apps/home/templates/current_shows.jade
+++ b/src/mobile/apps/home/templates/current_shows.jade
@@ -2,7 +2,7 @@ for show in shows
   li.home-page-current-show
     header
       h2
-        a(href="/#{show.get('partner').default_profile_id}")= show.get('partner').name
+        a(href="/partner/#{show.get('partner').id}")= show.get('partner').name
         br
         a(href=show.href())= show.feedHeader()
       h3
