--- a/src/mobile/components/artist_list/template.jade
+++ b/src/mobile/components/artist_list/template.jade
@@ -2,7 +2,7 @@ ul.artist-list
   for artist in artists
     li
       if partnerArtist && partner
-        a( href="/#{partner.get('default_profile_id')}/artist/#{artist.get('id')}" )
+        a( href="/partner/#{partner.get('id')}/artists/#{artist.get('id')}" )
           img( src=artist.defaultImageUrl() )
           h4= artist.get('name')
       else
