chore(sailthru): removes sailthru

--- a/src/desktop/components/main_layout/templates/minimal_header.jade
+++ b/src/desktop/components/main_layout/templates/minimal_header.jade
@@ -2,7 +2,7 @@
 block locals
   - attributes = {}
   - bodyClass = helpers ? helpers.buildBodyClass(sd, 'body-header-fixed minimal-header') : ''
-  - defaultOptions = {modal: true, flash: true, stripev3: false, sailthru: true, marketo: true}
+  - defaultOptions = {modal: true, flash: true, stripev3: false, marketo: true}
 - options = options ? Object.assign({}, defaultOptions, options) : defaultOptions
 
 doctype html
