--- a/src/desktop/components/main_layout/templates/blank.jade
+++ b/src/desktop/components/main_layout/templates/blank.jade
@@ -1,7 +1,7 @@
 block locals
   - attributes = {}
   - bodyClass = helpers ? helpers.buildBodyClass(sd) : ''
-  - defaultOptions = {modal: true, flash: true, stripev3: false, sailthru: true, marketo: true}
+  - defaultOptions = {modal: true, flash: true, stripev3: false, marketo: true}
 - options = options ? Object.assign({}, defaultOptions, options) : defaultOptions
 
 doctype html
