--- a/src/desktop/components/main_layout/templates/index.jade
+++ b/src/desktop/components/main_layout/templates/index.jade
@@ -1,7 +1,7 @@
 //- Override any locals with `append locals`
 block locals
   - bodyClass = helpers ? helpers.buildBodyClass(sd, 'body-header-fixed') : '';
-  - defaultOptions = {modal: true, flash: true, stripev3: false, sailthru: true, marketo: true}
+  - defaultOptions = {modal: true, flash: true, stripev3: false, marketo: true}
   - options = options ? Object.assign({}, defaultOptions, options) : defaultOptions
 
 doctype html
