chore: preloads unica italic

--- a/src/v2/index.ejs
+++ b/src/v2/index.ejs
@@ -11,6 +11,7 @@
   <!-- Create preload tags for most common fonts -->
   <link rel="preload" href="<%%= fontUrl %>/ll-unica77_regular.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="<%%= fontUrl %>/ll-unica77_medium.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="<%%= fontUrl %>/ll-unica77_italic.woff2" as="font" type="font/woff2" crossorigin />
 
   <link rel='apple-touch-icon' href="<%%= icons.icon152 %>" />
   <link rel='apple-touch-icon' sizes='120x120' href="<%%= icons.icon120 %>" />
