--- a/src/mobile/components/layout/templates/head.jade
+++ b/src/mobile/components/layout/templates/head.jade
@@ -1,5 +1,5 @@
 //- onetrust cookie consent, must be the first js loaded.
-if ( !sd.THIRD_PARTIES_DISABLED && sd.ONETRUST_SCRIPT_ID )
+if ( !sd.THIRD_PARTIES_DISABLED && !sd.EIGEN && sd.ONETRUST_SCRIPT_ID )
   script( src="https://cdn.cookielaw.org/consent/#{sd.ONETRUST_SCRIPT_ID}/OtAutoBlock.js", type="text/javascript" )
   script( src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js", type="text/javascript", charset="UTF-8", data-domain-script="#{sd.ONETRUST_SCRIPT_ID}" )
   script( type="text/javascript" ).
