--- a/src/v2/index.ejs
+++ b/src/v2/index.ejs
@@ -4,7 +4,7 @@
 <head>
 
   <!-- onetrust cookie consent, must be the first js loaded -->
-  <%% if ( !disable.onetrust && !sd.THIRD_PARTIES_DISABLED && sd.ONETRUST_SCRIPT_ID ) { %>
+  <%% if ( !disable.onetrust && !sd.THIRD_PARTIES_DISABLED && !sd.EIGEN && sd.ONETRUST_SCRIPT_ID ) { %>
     <script src="https://cdn.cookielaw.org/consent/<%%= sd.ONETRUST_SCRIPT_ID %>/OtAutoBlock.js" type="text/javascript" >
     </script>
     <script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js"  type="text/javascript" charset="UTF-8" data-domain-script="<%%= sd.ONETRUST_SCRIPT_ID %>" >
