--- a/src/Apps/RSS/templates/article.ejs
+++ b/src/Apps/RSS/templates/article.ejs
@@ -2,7 +2,7 @@
   <guid isPermaLink="false"><%= appUrl %><%= article.href %></guid>
   <title><%= article.thumbnailTitle %></title>
   <link><%= appUrl %><%= article.href %></link>
-  <author><%= article.byline %></author>
+  <dc:creator><%= article.byline %></dc:creator>
   <pubDate><%= new Date(article.publishedAt).toUTCString() %></pubDate>
   <% if (article.thumbnailImage && article.thumbnailImage.resized) { %>
     <enclosure url="<%= article.thumbnailImage.resized.src %>" length="0" type="image/jpeg" />
@@ -25,7 +25,7 @@
         <% if (section.__typename === 'ArticleSectionText') { %>
           <%- section.body %>
         <% } else if (section.__typename === 'ArticleSectionEmbed') { %>
-          <iframe src="<%= section.url %>" width="100%" height="600" />
+          <p><a href="<%= section.url %>">View embedded content</a></p>
         <% } else if (section.__typename === 'ArticleSectionVideo') { %>
           <%- section.embed %>
         <% } else if (section.__typename === 'ArticleSectionImageCollection' || section.__typename === 'ArticleSectionImageSet') { %>
